friends page spacing issues fixes

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 .avatar-menu{padding: 0 !important;}
 .avatar-menu img{width: 50px; height: 50px; border-radius: 50%; box-shadow: 0 3px 15px rgba(0, 0, 0, 0.1)}
 .notification-count .ant-badge-count{background: var(--primary) !important; border-radius: 0px !important; min-width: 16px; height: 16px; padding: 0 3px; font-size: 10px; line-height: 16px; top: -5px; right: -6px;}
-.share-box{border-radius: 0.8rem; text-align: center; margin-bottom: 16px; background: var(--white); border: 1px solid var(--line);}
+.share-box{border-radius: 0.8rem; text-align: center; margin-bottom: 8px; background: var(--white); border: 1px solid var(--line);}
 .sharebox-icons, .doc-icons{width: 45px; height: 40px; vertical-align: initial; display: inline-block; vertical-align: middle; background: url(styles/images/icons.svg) no-repeat;}
 .left-rail .profile-card{display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; border-radius: 0.8rem; color: var(--white); border: 0; position: relative;}
 .profile-card .ant-card-cover{position: absolute; left: 0; top: 0; right: 0; height: 68px; border-radius: 0.8rem 0.8rem 0 0; overflow: hidden; border: 1px solid transparent;}
@@ -216,7 +216,8 @@
 /* FriendRequests */
 .ant-avatar.request-image{width: 60px !important;height: 60px !important;border-radius: 12px;}
 .list-remove, .list-remove:hover{color: #FF0000 !important; font-weight: 500;}
-.requests .ant-row .ant-col{margin: 16px 5px 0;}
+.requests .ant-row .ant-col{padding: 8px 0;}
+.requests .ant-list-item{margin-bottom: 0 !important;}
 .group-page .ant-card-meta-detail .ant-card-meta-title{margin-bottom: 0;}
 .group-page .list-link{color: var(--primary) !important;font-weight: 500;}
 .group-page .ant-card, .group-page .ant-card-actions{border-radius: 10px;}
@@ -328,4 +329,3 @@ textarea{resize: unset !important;}
 .notification-list .notification-image .ant-avatar-image,  .messenger-drawer .ant-card-meta .ant-avatar-image, .profile-dropdown .ant-card-meta .ant-avatar-image,
 .addpost-user .ant-card-meta-avatar .ant-avatar-image{border-radius: 50% !important;}
 .validateerror{color:red;text-align: right; display: block;}
-.sub-text .ant-card-actions li{padding-bottom: 12px;}
